@@ -36,7 +36,7 @@ class ReferenceSequenceAssignmentProviderTests(unittest.TestCase):
     def __init__(self, methodName="runTest"):
         super(ReferenceSequenceAssignmentProviderTests, self).__init__(methodName)
         self.__verbose = True
-        self.__traceMemory = True
+        self.__traceMemory = False
 
     def setUp(self):
         #
