@@ -1,6 +1,7 @@
 numpy
+jsonschema >= 2.6.0
 rcsb.utils.io >= 0.53
-rcsb.db >= 0.958
+rcsb.db >= 0.960
 rcsb.utils.chemref >= 0.33
 rcsb.utils.citation >= 0.15
 rcsb.utils.config >= 0.33
